# t031a5

./: .gitignore  ARQUIVOS_IMPRESCINDIVEIS.md  CONFIGURACAO_LLM_FINAL.md  DEPLOY_FINAL.md  DIAGRAMA_ARQUITETURA_t031a5.md  ENTREGA_FINAL.md  ESTRUTURA_FINAL_SISTEMA_t031a5.md  GIT_SETUP_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  INPUTS_DISPONIVEIS.md  INSTRUÇÕES_TESTE_FINAL.md  LIMPEZA_AUXILIARES_COMPLETA.md  LIMPEZA_MD_CONSOLIDADA.md  LIMPEZA_TOTAL_AUXILIARES.md  PLANO_FINALIZACAO_FASE1.md  PROJECT_REORGANIZATION_SUMMARY.md  PROJECT_STATUS_FINAL.md  PROMPT_MEMORIA_SISTEMA_t031a5.md  PROMPT_TRANSFERENCIA_CHAT.txt  README.md  REORGANIZACAO_MOVEMENTS.md  REORGANIZACAO_WEBSIM.md  RESUMO_COMPLETO_SISTEMA_t031a5_ATUALIZADO.md  RESUMO_COMPLETO_SISTEMA_t031a5_backup.md  RESUMO_FINAL_APRENDIZADOS_t031a5.md  SISTEMA_SIMPLIFICADO.md  VARREDURA_FINAL_COMPLETA.md  check_g1_status.py  correcao_dji_hibrido.py  deploy_g1.sh  diagnostico_dji_detalhado.py  discover_real_movements.py  env_exemplo_configuracao.txt  exemplo_uso_audio_definitivo.py  fix_g1_movements.py  pyproject.toml  run_t031a5.py  run_tests.py  setup_git_cloud.sh  simple_movement_test.py  (+26 more)
archive/: README.md
archive/dance_tests/: test_g1_dance_low_level.py  test_g1_dance_smooth_with_legs.py
archive/hip_tests/: test_g1_hip_movement_simple.py  test_g1_hip_rotation_ai_mode.py  test_g1_hip_rotation_only.py  test_g1_joints_debug_mode.py  test_g1_waist_yaw_debug_low_level.py  test_g1_waist_yaw_joint_control.py  test_g1_waist_yaw_low_level_dds.py  test_g1_waist_yaw_low_level_simple.py  test_g1_waist_yaw_only.py
audio/effects/: placeholder_sounds.md
config/: README.md  README_CONFIGURATIONS.md  g1_base_complete.json5  g1_basic.json5  g1_bluetooth_audio.json5  g1_conversation.json5  g1_elevenlabs.json5  g1_llava.json5  g1_local_llm.json5  g1_logitech.json5  g1_mock.json5  g1_native_audio.json5  g1_native_connectors.json5  g1_ollama_llm.json5  g1_production.json5  g1_real.json5  g1_stt.json5  g1_test.json5  g1_test_robot.json5  g1_tts.json5
credentials/: README.md  google_asr.json
docs/: ENVIRONMENT_SYNC_GUIDE.md  README.md  TESTE_ROBO_G1.md  g1_locomotion_rotation_guide.md  lessons_learned_g1_dance_tests.md
docs/api/: README.md
docs/archive/: PROJECT_SUMMARY.md  g1_integration_guide.md
docs/guides/: MOVEMENT_USAGE_GUIDE.md  OFICIAL_UNITREE_DISCOVERIES.md  PARAMETROS_AUDIO_DEFINITIVOS.md  PRODUCTION_GUIDE.md  TESTE_ROBO_G1.md  extracted_pdf_content.txt  g1_locomotion_rotation_guide.md  g1_movements_complete_list.md  g1_state_machine_guide.md
docs/project/: CHECKLIST_DEPLOY_JETSON.md  DEPLOY_JETSON_GUIDE.md  ENTREGA_FINAL_CLIENTE.md  IMPLEMENTATION_SUMMARY_FINAL.md  INPUTS_ORGANIZATION.md  PREPARACAO_TESTE_FINAL_PRODUCAO.md  (+10 more)
examples/: basic_usage.py
scripts/: README.md  activate_venv.sh  auditoria_jetson.sh  autoconnect_anker.sh  check_firmware_version.py  create_config.py  debug_dji_quality.py  download_llama_model.py  fix_threshold_production.py  git_sync_workflow.sh  github_sync_complete.sh  instalar_dependencias_ia_real.py  install_g1_sdk.sh  setup_bluetooth_audio.py  setup_local_llm.py  setup_ollama.py  setup_robot_complete.py  setup_terminal.sh  sync_environments.sh  test_dji_real_quality.py  test_hybrid_microphone.py  test_microphone_quality.py  test_production_system.py  test_quick_production.py  tobias_startup_complete.sh  verificar_estado_g1.py  verificar_sistema.py
static/: style.css  websim.js
templates/: index.html
tests/: __init__.py  run_test.py  test_advanced_plugins.py  test_advanced_plugins_simple.py  test_cli.py  test_conversation_system.py  test_cortex.py  test_g1_confirmed_features.py  test_g1_integrated.py  test_integration.py  test_llm_providers.py  test_llm_simple.py  test_logging_system.py  test_native_connectors.py  test_real_g1_integration.py  test_system.py  test_t031a5_structure.py  test_unitree.py  test_unitree_simple.py  test_websim.py
(+125 files in other folders)
